base-installer (1.83) UNRELEASED; urgency=low
  
  [ Fabio M. Di Nitto ]
  * Install smp kernel by default on sun4v (Niagara based sparc).
    With the new LDOM support on the way, adding/removing CPU's
    from control/service/guest nodes is easy as drinking a glass
    of water. With this change we will guarantee that the user
    will always get the best setup.

 -- Fabio M. Di Nitto <fabbione@fabbione.net>  Tue, 03 Jul 2007 09:58:53 +0200

base-installer (1.82) unstable; urgency=low

  [ Frans Pop ]
  * Add support for Serial ATA RAID (dmraid):
    - install dmraid (if needed)
    - create device nodes in /target for SATA RAID devmapper devices

  [ Joey Hess ]
  * Split off a bootstrap-base package that contains the bits needed to
    [c]debootstrap a base installation.
  * base-installer now provides the framework for installing base, including a
    shell library in /usr/lib/base-installer/library.sh.
  * bootstrap-base templates are not renamed, to avoid preseeding
    issues and other complications.
  * Dropped pcmcia modules package installation support (2.4 kernel stuff).
  * Remove old support for using prebaseconfig templates for progress.

  [ Otavio Salvador ]
  * Add support to run_waypoints to accept different templates for the
    progress bar title.

 -- Otavio Salvador <otavio@ossystems.com.br>  Fri, 29 Jun 2007 15:10:49 -0300

base-installer (1.81) unstable; urgency=low

  [ Otavio Salvador ]
  * Provides installed-base. This is need to be able to use alternative
    ways of installing Debian.

 -- Joey Hess <joeyh@debian.org>  Mon, 18 Jun 2007 22:16:24 +0100

base-installer (1.80) unstable; urgency=low

  [ Frans Pop ]
  * Remove obsolete code to mount CDs in /target for 2.2 kernels.

  [ Joey Hess ]
  * Depend on debian-archive-keyring-udeb. (This is not a hard dependency,
    since the keyring is not always used, but it's simpler than using
    anna-install.)

  [ Updated translations ]
  * Panjabi (pa.po) by A S Alam