@@ -72,7 +72,7 @@ _Description: Unable to install the selected kernel
  .
  Check /var/log/syslog or see virtual console 4 for the details.
 
-Template: base-installer/kernel/which-kernel
+Template: base-installer/kernel/image
 Type: select
 #flag:translate!:1
 # For base-installer, "none" is an additional choice to a list of kernels.
