@@ -1,15 +1,3 @@
-Template: base-installer/kernel/image
-Type: string
-Default: kernel-image
-Description: for internal use only (?)
- Default kernel image if nothing better is found
-
-Template: base-installer/kernel/image-2.6
-Type: string
-Default: linux-image
-Description: for internal use only (?)
- Default kernel image if nothing better is found (2.6)
-
 Template: base-installer/kernel/linux/initrd-2.6
 Type: boolean
 Default: true
